--- a/jquery.html
+++ b/jquery.html
@@ -6,11 +6,16 @@
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script>
     $(document).ready(function(){
-      $(".btn").click(function(){
-        $(".popup_bg").css({ "display" : "block"});
-      })
-      $(".popup_bg").click(function(){
-        $(this).css({"display" : "none" })
+      $(".btn").hover(function(){
+        $(this).css({ // 선택 this
+          "background" : "skyblue",
+          "transition" : "0.7s"
+        })
+      },function(){
+        $(".btn").css({
+          "background" : "orange",
+          "transition" : "0.5s"
+        })
       })
     });
   </script>
@@ -24,29 +29,13 @@
       text-align: center;
       cursor: pointer;
     }
-    .popup_bg{
-      display: none;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.7);
-    }
-    .popup{
-      position: absolute;
-      left: calc(50% - 150px);
-      top: calc(50% - 250px);
-      width: 300px;
-      height: 50px;
-      background-color: #fff;
-    }
   </style>
 </head>
 <body>
-  <div class="btn">팝업</div>
-  <div class="popup_bg">
-    <div class="popup"></div>
-  </div>
+  <div class="btn">메뉴</div>
+  <div class="btn">메뉴</div>
+  <div class="btn">메뉴</div>
+  <div class="btn">메뉴</div>
+  <div class="btn">메뉴</div>
 </body>
 </html>
